Added bootstrap grid layout for home.

--- a/index.css
+++ b/index.css
@@ -6,14 +6,18 @@ body {
   -o-background-size: cover;
 }
 
-#motto {
+.writing {
 	font-family: 'Shadows Into Light', cursive;
 }
 
 #carouselSlidesOnly {
-	border-radius: 15px;
-	width: 40%
+	width: 100%
 }
+
+#below-motto {
+	text-align: right
+}
+
 .box {
    display: flex;
    align-items:center;
