Updated styling and experiences.

--- a/education.css
+++ b/education.css
@@ -21,3 +21,20 @@ th, td {
   background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #fff5ba 65%);
   display: inline;
 }
+
+table {
+		margin-bottom: 80px;
+}
+
+.info {
+	position: relative;
+  background-color: #f7f7f7;
+  margin: -48px;
+  margin-top: 50px;
+  padding-left:50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 80px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
