--- a/css/education.css
+++ b/css/education.css
@@ -1,3 +1,5 @@
+@import url(./globals.css);
+
 tr:hover {
 	background-color: #f5f5f5;
 }
@@ -12,13 +14,13 @@ th, td {
 
 .u--highlight {
   user-select: auto;
-  background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #ffd4b8 65%);
+  background: linear-gradient(180deg, rgba(255,255,255,0) 65%, var(--primary-color) 65%);
   display: inline;
 }
 
 #smaller-highlight {
   user-select: auto;
-  background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #fff5ba 65%);
+  background: linear-gradient(180deg, rgba(255,255,255,0) 65%, var(--primary-color2) 65%);
   display: inline;
 }
 
@@ -28,7 +30,7 @@ table {
 
 .info {
 	position: relative;
-  background-color: #f7f7f7;
+  background-color: var(--bg-color);
   margin: -48px;
   margin-top: 50px;
   padding-left:50px;
