--- a/css/globals.css
+++ b/css/globals.css
@@ -14,6 +14,22 @@ html, body{
     --primary-color3: #ffbaab;
     --bg-color: #f7f7f7;
     --gradient-color: linear-gradient(90deg, #ff9191 0%, #ffb67a 100%);
+    --darker-gradient: linear-gradient(90deg, #ff8f8f 0%, #ff9645 100%);
     --shadow-color:  0px 10px 30px rgba(118, 85, 225, 0.3);
     --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
+  }
+
+
+  .navbar-nav .active a{
+      background: var(--darker-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+  }
+
+  .navbar-nav a:hover{
+      background: var(--darker-gradient);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
   }
