--- a/css/index.css
+++ b/css/index.css
@@ -145,6 +145,13 @@ img {
   margin-top: 20px;
 }
 
+@media(max-width:440px) {
+  .card__page {
+    max-width: calc(100%);
+  }
+}
+
+
 .btn-primary {
     background: var(--gradient-color);
     background-clip: padding-box;
