--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,12 @@
 
 body {
   background: url('../images/webbg.jpg') no-repeat center center fixed;
-  background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
   background-color: var(--full-bg-color);
 }
 
