--- a/css/education.css
+++ b/css/education.css
@@ -28,7 +28,7 @@ table {
 		margin-bottom: 80px;
 }
 
-.info {
+/*.info {
 	position: relative;
   background-color: var(--bg-color);
 	margin: -48px;
@@ -39,4 +39,4 @@ table {
   padding-bottom: 80px;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
-}
+}*/
